--- a/src/index.html
+++ b/src/index.html
@@ -9,9 +9,17 @@
     <h1>NO - NES Optime</h1>
     <canvas id="nes-canvas" width="256" height="240"></canvas>
 
+    
+    <script src="./core/bits.js"></script>
+    <script src="./core/6502.js"></script>
+    <script src="./util/bits.js"></script>
+    <script src="./util/util.js"></script>
+    <script src="./core/nes.js"></script>
+    <script src="./core/memory.js"></script>
+    <script src="./core/ines.js"></script>
+    
     <script src="index.js"></script>
-
-    <script src="../core/ines.js"></script>
+    <script src="./nes-handler.js"></script>
 </body>
 
 </html>
