More PPU progress

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
     <script src="./core/nes.js"></script>
     <script src="./core/memory.js"></script>
     <script src="./core/ines.js"></script>
+    <script src="./core/ppu.js"></script>
 
     <script src="index.js"></script>
 
