--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,7 @@
 <body>
     <h1>NO - NES Optime</h1>
     <canvas id="nes-canvas" width="256" height="240"></canvas>
+    <canvas id="pattern-canvas" width="256" height="128"></canvas>
 
     <div id="panels">
         <div class="panel" id="debug"></div>
