--- a/src/index.html
+++ b/src/index.html
@@ -4,14 +4,17 @@
     <title>NO</title>
     <link rel="stylesheet" type="text/css" href="index.css" />
 
+    <script src="./util/bits.js"></script>
+    <script src="./util/soundplayer.js"></script>
+    <script src="./util/util.js"></script>
+
     <script src="./core/bits.js"></script>
     <script src="./core/6502.js"></script>
-    <script src="./util/bits.js"></script>
-    <script src="./util/util.js"></script>
     <script src="./core/nes.js"></script>
     <script src="./core/memory.js"></script>
     <script src="./core/ines.js"></script>
     <script src="./core/ppu.js"></script>
+    <script src="./core/apu.js"></script>
 
     <script src="index.js"></script>
 
