--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
     <script src="./core/ines.js"></script>
     <script src="./core/ppu.js"></script>
     <script src="./core/apu.js"></script>
+    <script src="./core/controller.js"></script>
 
     <script src="index.js"></script>
 
