Basic mapper support

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,10 @@
     <script src="./util/bits.js"></script>
     <script src="./util/soundplayer.js"></script>
     <script src="./util/util.js"></script>
-
+    
+    <script src="./core/mappers/nrom.js"></script>
+    
+    <script src="./core/mapper.js"></script>
     <script src="./core/6502.js"></script>
     <script src="./core/nes.js"></script>
     <script src="./core/memory.js"></script>
@@ -15,6 +18,9 @@
     <script src="./core/ppu.js"></script>
     <script src="./core/apu.js"></script>
     <script src="./core/controller.js"></script>
+
+
+
 
     <script src="index.js"></script>
 
