Add a few more broken mappers

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,11 @@
     <script src="./util/soundplayer.js"></script>
     <script src="./util/util.js"></script>
     
-    <script src="./core/mappers/nrom.js"></script>
+    <script src="./core/mappers/GxROM.js"></script>
+    <script src="./core/mappers/MMC3.js"></script>
+    <script src="./core/mappers/NROM.js"></script>
+    <script src="./core/mappers/UxROM.js"></script>
+    <script src="./core/mappers/CNROM.js"></script>
     
     <script src="./core/mapper.js"></script>
     <script src="./core/6502.js"></script>
