Basic MMC1 support

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
     
     <script src="./core/mappers/GxROM.js"></script>
     <script src="./core/mappers/MMC3.js"></script>
+    <script src="./core/mappers/MMC1.js"></script>
     <script src="./core/mappers/NROM.js"></script>
     <script src="./core/mappers/UxROM.js"></script>
     <script src="./core/mappers/CNROM.js"></script>
